--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WmBQzraDEtQr1BsWh2NQJodJychJ1C/wIXBH+PKSN/u41YfVCf+qE31cCOy7eaNjcDVl5/uUjAU3lVL9zOV/8OTt5Q9fCYJOeAaNVpW6jA7qGit2z6Iv6MTVstHh1XJv.tYGkNo8KY2mkY+YTURSTi2wv1oVv065WUSOy52lxOHLidu0+GRnUG3Uu77CMjAAxTC1o3OywEjeJxLAhOwxAJqghq5lIHVv5ehz+IYWnrxc8//FTTlKhIcjFpVUEAz5G">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="P5Hp9cMnQeUkcgOIDLkyGuCMQEogP7oIh80Ut+UN6NIuh5XvX6yRnoVQ+g7S00+9x9HutXrh589UKfqhTfKCodxR0BGrfamZkR30RGDunnCFE0BokmYBgD/hyedO9qoI.Acf+kc0FZihZidbpRDNf/axgofJJbxOWgk5r7hVsM+pLtcWypcYQP2TTywi3JtXtNigeK15iZTqh4qhwyik4WxHM0pamEM8iaSbiPtykaPvESTfnVbnH+p6rmC+STd4b">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
