--- a/training.html
+++ b/training.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
