--- a/Social.html
+++ b/Social.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
 
     
 
@@ -276,7 +276,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AjnDeIoqQpDpitvWIxG4UJOjWBdjAzWY2+9EQ5lTaFveZh2jb0aC/e0QoKZ0B20ihrc19MyECm6KaiVW7P1CZ2J7q2OOzzhA+DnulCNsdCKduU/fm6o+NmfM7GSXJQuA.4g1gLfz/IuRVbnTO5mmgHf1+nramvJ/lfDB75y47GIRCGcL00wVWfjPUr59x7cogIqSL/T8IbHsXX7n2g2LkkVIdN9fvXe2/05bnyIwkXDDnIv+DJWPTAj/8LKm5UQ+4">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7nGuMwXJ7KdNuuUcK4aCI/XUhCS6FEEdMgUl/Fbq3bs84gavcjlZlxR+5v5LXHnb8sYK+XqvfTP/p7SbOh+cjaUTQKsIz7zSFsmNgXfsBdGrIQEIqcOrRwt4BHk3Am3J.BP+ZEMggMmMa3GRhznSF2LDx9awzxyf8F4ct4PSHWWNrwAXOMpNl6uIgfhMvWOyNbKg22AVINVp1dyNyK3GXvIOJTmoCTLc7AgNPEVN/IHiBlieQafoj14+C0tVbGSZP">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
