--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bV/7Eoaw/J9FLOfaPwT8+IIlWx2I3iE11jyAPO9oPbO6KzE7SB7QAKz8yRGVYe89DLPt1jkkle/cP20N1pbjy5dV026YT2YLC3LN3ibfTJHYQInqo8ZgN708Sf40H3wG.1xbuaxMYDnGVVmkUcoD5w6DwofPvXLGpYIOGnYDHrlsVJteSTSgS/UwXFW9F1ddmk6QfMD0LJ2NF3iDafAeEeWA2Nfmn0IPp6BchENVCA8uqmaB3WFc9mjlwahgp4Bmp">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bKAT3eTBpPwyyPAXG2wssw/27p2jNZlWVrm4RunFv6IpPPvTJkCdKfvANQi1itm8e1G3bTajsTCGP/2RnNWJ9pb36OXML+c33NzkyO1GfJcSEWF/cAOCml0W0P8Lzxeb.4xvHXmLCOpd4kfQGSmUeubu+esfrKXPI/ppQdT+KcPgFSSOAwzaZ2KA5BYtnFGfSUZjn5q+0m3G7ILLbpHpuTx3vePwMpkLBrT5IlsfAeky9lhzerKlmjtkTXrktBcLJ">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
