--- a/Indicators.html
+++ b/Indicators.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -203,7 +203,7 @@
                 <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-2">Labour Market Indicators</h2>
                 <h3 class="mbr-section-subtitle pb-5 align-left mbr-fonts-style display-5">Labour Market Indicators</h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background615.jpg">
+                    <img src="assets/images/background626.jpg">
                 </div>
             </div>
             <div class="cards-block">
