--- a/Education.html
+++ b/Education.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
 
     
 
