--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3PhIFtM82aeh8Ng41S8RlSiTy/6yhAg9/8h89vJdbwUvVu70KiwTXziDLMHa+JZ91aWswvVkcRSCSPJZqQlZUSNeso4A5hhAjWKf8alQjGIjHRXpBRoLttYwRH/fy6SQ.ND1LW4dQZmBvDO9Bc1RDZe7oG05/0WV6lqD10hkTWpw7yrzUxMBxJqW0P0i+c+qXAUexKf16UtmVUey/A75FFI3ewrNJaEvivNqhbgGiv2O1qmMOMkSfa+TupcIymwNH">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QN1U/xkoAkOP88aF/5nHTP3r3xmjIqC+bwSO5NSOFdofNVEjDuEHp+9ndwFt7hzR7yuCeqyPgWNmv1otpEMpCeHB8+dvLG+KHBnD76yLoXRrsl4YGtqqt0ds9eJndynG.Edqmz5lnSepY9F0yFE+13T0nJH2VpC18LPEaXsHPdQ7cP5IoIZ57oOsMITazjf2iNXaRWuzJ+auFMJwFWLAm43JSJ0+jt4Vb1ewyZ0AG6mTUPt/W1IkN7HDIB6WuXliq">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
