--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bKAT3eTBpPwyyPAXG2wssw/27p2jNZlWVrm4RunFv6IpPPvTJkCdKfvANQi1itm8e1G3bTajsTCGP/2RnNWJ9pb36OXML+c33NzkyO1GfJcSEWF/cAOCml0W0P8Lzxeb.4xvHXmLCOpd4kfQGSmUeubu+esfrKXPI/ppQdT+KcPgFSSOAwzaZ2KA5BYtnFGfSUZjn5q+0m3G7ILLbpHpuTx3vePwMpkLBrT5IlsfAeky9lhzerKlmjtkTXrktBcLJ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bKiJmd/7nhNyb/xtHOjAcX5x8ozGAitnNARZarl6Nv82jxe1CaMNVVfcrZ6dtdAZrMW/y2wYAKdv6zNy8vG4jEhaYHF3gh+W6DrxkVoxypPQYvr5rY/taWo2LfikIuSq.p90EPWeaeALZThW2ySP6bICvigFDqx1n852eyXY7JIUnqiNO6UY0QojrUaUmmR1z4foFV3eY3go53l/K9LplxBv7nJ9FLEqhVZZbmVTo2uGmCglz6/IHd5ikAC+cxypJ">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
