--- a/studies.html
+++ b/studies.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
 
     
 
@@ -136,7 +136,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a></div>
-                        <img src="assets/images/background128.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background16.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -153,7 +153,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background229.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background27.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -171,10 +171,10 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background330.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background38.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-5"><a href="assets/files/LMIS%20Model%20Sept2019%20Based%20on%20Four%20Pillars.pdf">Sadat Industrial City 2018</a></h4>
+                        <h4 class="card-title mbr-fonts-style display-5"><a href="assets/files/LMIS Model Sept2019 Based on Four Pillars.pdf" target="_blank">Sadat Industrial City 2018</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Labour Market Studies can be varying from research paper relates to job market and recruting or the whole echo system of the LMI from graduation to job opportunities through out the job itself aand what the seekers face durnig the process followed by normal studies with surveys or a specialized tracer study&nbsp;</p>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background127.jpg" alt="Mobirise">
+                        <img src="assets/images/background15.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Indicators and reports</strong></h4>
@@ -336,7 +336,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background222.jpg" alt="Mobirise">
+                        <img src="assets/images/background20.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Indicators and reports</strong></h4>
@@ -352,7 +352,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background323.jpg" alt="Mobirise">
+                        <img src="assets/images/background31.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Indicators and reports</strong></h4>
