--- a/training.html
+++ b/training.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
@@ -355,7 +355,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJ09qNnLhAWBQRo5N7CyE8paM" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJ09qNnLhAWBQRo5N7CyE8paM" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
